@@ -1,3 +1,8 @@
+2009-05-18  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/39999
+	* gcc.c-torture/compile/pr39999.c: New testcase.
+
 2009-05-17  Jason Merrill  <jason@redhat.com>
 
 	PR c++/40139
